refactor: apply SOLID principles and design patterns to service layer
- Split PaymentService into focused services (PaymentQueryService, PaymentTransactionService)
- Add PaymentMapper for DTO conversion
- Fix NullPointerException vulnerabilities in api-gateway filters
- Replace entity with DTO in AuditController
- Convert Notification DTOs to records
- Fix nested ternary operations (extract to helper methods)
- Remove unused imports across services
- Update documentation for port assignments
- Fix code smells from SonarQube analysis